Index page completed as per week 1 instructions
Images folder created.
Images placed in images folder

--- a/first_index.html
+++ b/first_index.html
@@ -11,18 +11,38 @@
 
 <header>
 	<div id="logo">
+		<h1>Welcome to Car Kare Express&copy; </h1>
+		<p>Mobile Automotive Maintenance</p>
 		<img src="#" alt="#" title="#"/>
 	</div>
 	<nav>
-		<a href="#">Home</a> | <a href="#">About Us</a> | <a href="#">Services</a> | <a href="#">Contact Us</a>
-	</nav>
+		<li><a href="#">Home</a></li> | <li><a href="#">About Us</a></li> | <li><a href="#">Service Levels</a></li> | 
+		<li><a href="#">FAQ</a></li> | <li><a href="http://www.amsoil.com">Amsoil Home Page</a></li> | 
+		<li><a href="#">Contact Us</a></li>
+    </nav>
 	
 </header>
 	
 <body>
+	<section>
+		<h3>  </h3>
+	
+	</section>
+	
+	<section>
+		<h3>  </h3>
+	</section>
+	
+	<article>
+	
+	</article>
+	
+	<aside>
+	
+	</aside>
 	
 	
-</body
+</body>
 
 
 <footer>
