Spaced and indented html tags a bit more

--- a/index.html
+++ b/index.html
@@ -10,77 +10,108 @@
 </head>
 
 <header>
+
 	<div id="logo">
 		<h1>Car Kare Express&trade; </h1>
 		<img src="images/car_kare_logo_3.png"  />
 		<p>Mobile Automotive Maintenance</p>
 	</div>
+	
 	<nav>
-		<li><a href="#">Home</a></li> | <li><a href="#">About Us</a></li> | 
-		<li><a href="#">Service Levels</a></li> | <li><a href="#">FAQ</a></li> | 
-		<li><a href="http://www.amsoil.com">Amsoil Home Page</a></li> | <li><a href="#">Contact Us</a></li>
+		<ul>
+			<li><a href="#">Home</a></li> | <li><a href="#">About Us</a></li> | 
+			<li><a href="#">Service Levels</a></li> | <li><a href="#">FAQ</a></li> | 
+			<li><a href="http://www.amsoil.com">Amsoil Home Page</a></li> | <li><a href="#">Contact Us</a></li>
+		</ul>
     </nav>
 	
 </header>
 	
 <body>
+
 	<section>
+	
 		<h2>Have your cake and eat it too...</h2>
-	<p> Why take time away from work or even after work to get your vehicle serviced when you can do both simultaneously. 
+		
+		<p> Why take time away from work or even after work to get your vehicle serviced when you can do both simultaneously. 
 	What if you could have the service technician come to you? Think of the time you could save. Our <strong>Car Kare Express&trade;</strong> trucks
-	can perform routine services like:
-	<ul>
-		<li>complete oil changes</li>
-		<li>tune-ups</li>
-		<li>transmission flushes</li>
-		<li>radiator fills</li>
-		<li>brake services</li> 
-	</ul>	
+	can perform routine services like: </p>
+	
+		<ul>
+			<li>complete oil changes</li>
+			<li>tune-ups</li>
+			<li>transmission flushes</li>
+			<li>radiator fills</li>
+			<li>brake services</li> 
+		</ul>	
+	
 	</section>
 	
 	<section>
+	
 		<h2>Save time and money with extended drain intervals</h2>
 			<p>Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
 			Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
 			all passenger, commercial and racing applications.</p>
+			
 			<p> They were the first to accomplish this in 1972 with their motor oil, and have been leading the industry ever since with 
 			a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines.</p>  
+			
 	</section>
 	
 	<article>
+	
 		<h3>Service Packages</h3>
+		
 		<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
-			<ul>
-				<li>Bronze <br><img src="images/bronze_package.gif" /></li>
-				<li>Silver<br><img src="images/silver_package.gif" /></li>
-				<li>Gold<br><img src="images/gold_package.gif" /></li>
-				<li>Platinum<br><img src="images/platinum_package.gif" /></li>
-			<ul>
+		
+		<ul>
+			<li>Bronze <br><img src="images/bronze_package.gif" /></li>
+			<li>Silver<br><img src="images/silver_package.gif" /></li>
+			<li>Gold<br><img src="images/gold_package.gif" /></li>
+			<li>Platinum<br><img src="images/platinum_package.gif" /></li>
+		<ul>
+		
 		<p>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</p>
+		
 	</article>
-		<p><strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.</p>
-		<p><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong> <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p>
+	
+	<section>
+	
+		<p><strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. 
+		Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.</p>
+		
+		<p><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong> 
+		<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p>
+		
+	</section>
 	
 	<aside>
+	
 		<h3>Popular Amsoil Products</h3>
+		
 		<ul>
 			<li>Amsoil Brake Fluid <br> <img src="images/ams_brake_fluid.jpg" /></li>
 			<li>Amsoil PI <br><img src="images/ams_pi.jpg" /></li>
 			<li>European Formula 5W-30<br><img src="images/ams_euro_oil.jpg" /></li>
 			<li>Amsoil Antifreeze<br><img src="images/ams_antifreeze.jpg" /></li>
-		</ul>	
+		</ul>
+			
 	</aside>
 	
 	
 </body>
 
 
-<footer>
+	<footer>
+
 	<h2>Car Kare Express &trade;</h2>
+	
 	<p>A subsidiary of UniqueOne Networks, LLC &trade; 2012. </p>
+	
 	<p>All rights reserved</p>
 	
 	
-</footer>
+	</footer>
 
 </html>
