created css folder and css page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <DOCTYPE HTML>
-
 <html lang="en">
-
 <head> 
 	<meta charset="utf-8">
-	
 	<title>Car Kare Express</title>
-	
+	<link rel="stylesheet" href="../css/carKareExpress.css">
 </head>
 
 <header>
