--- a/index.html
+++ b/index.html
@@ -1,115 +1,83 @@
-<DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
 <head> 
-	<meta charset="utf-8">
+	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" >
 	<title>Car Kare Express</title>
-	<link rel="stylesheet" href="../css/carKareExpress.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
-
-<header>
-
-	<div id="logo">
-		<h1>Car Kare Express&trade; </h1>
-		<img src="images/car_kare_logo_3.png"  />
-		<p>Mobile Automotive Maintenance</p>
-	</div>
-	
-	<nav>
-		<ul>
-			<li><a href="#">Home</a></li> | <li><a href="#">About Us</a></li> | 
-			<li><a href="#">Service Levels</a></li> | <li><a href="#">FAQ</a></li> | 
-			<li><a href="http://www.amsoil.com">Amsoil Home Page</a></li> | <li><a href="#">Contact Us</a></li>
-		</ul>
-    </nav>
-	
-</header>
-	
 <body>
-
-	<section>
-	
-		<h2>Have your cake and eat it too...</h2>
-		
-		<p> Why take time away from work or even after work to get your vehicle serviced when you can do both simultaneously. 
-	What if you could have the service technician come to you? Think of the time you could save. Our <strong>Car Kare Express&trade;</strong> trucks
-	can perform routine services like: </p>
-	
-		<ul>
-			<li>complete oil changes</li>
-			<li>tune-ups</li>
-			<li>transmission flushes</li>
-			<li>radiator fills</li>
-			<li>brake services</li> 
-		</ul>	
-	
+	<div id="contentWrapper">
+		<header>
+			<div id="logo">
+			<img src="images/car_kare_logo_3.png" alt="Car Kare Express" id="Car_Kare_Express_Logo" >
+			<h1>Car Kare Express&trade; </h1>
+			<p>Mobile Automotive Maintenance</p>
+			</div>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Service Levels</a></li>
+				<li><a href="#">FAQ</a></li>
+				<li><a href="http://www.amsoil.com">Amsoil Home Page</a></li>
+				<li><a href="#">Contact Us</a></li>
+			</ul>
+		</nav>
+<aside>
+	<h4>Popular Amsoil Products</h4>
+	<ul>
+		<li><img src="images/ams_brake_fluid.jpg" alt="Amsoil Brake Fluid" id="Amsoil_Brake_Fluid"> <br>Amsoil Brake Fluid</li>
+		<li><img src="images/ams_pi.jpg" alt="Amsoil PI" id="Amsoil_Performance_Improver"><br>Amsoil Performance Improver</li>
+		<li><img src="images/ams_euro_oil.jpg" alt="European Formula 5W-30" id="European_Formula_5W-30"><br>European Formula 5W-30</li>
+		<li><img src="images/ams_antifreeze.jpg" alt="Amsoil Antifreeze" id="Amsoil_Antifreeze"><br>Amsoil Antifreeze</li>
+	</ul>
+</aside>
+<article>
+	<gallery>
+	<h2>Experience the Car Kare Express difference with onsite maintenance</h2>
+	<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
+	<ul>
+		<li><!--Bronze<br>--><img src="images/bronze_package.png" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
+		<li><!--Silver<br>--><img src="images/silver_package.png" alt="Car Kare Express Silver Package" id="silver_package.png"></li>
+		<li><!--Gold<br>--><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
+		<li><!--Platinum<br>--><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
+	</ul>
+	</gallery>
+	<button>Sign In </button> <button>Get a Quote </button>&nbsp;
+	<p>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</p>
+</article>
+<div id="mainSection">
+	<section class="main">
+	<h2>Have your cake and eat it too...</h2>
+	<p> Why take time away from work or even after work to get your vehicle serviced when you can do both simultaneously. 
+			What if you could have the service technician come to you? Think of the time you could save. Our <strong>Car Kare Express&trade;</strong> trucks
+			can perform routine services like:
+		</p>
+	<p><strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. </p>
+	<p>	Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.</p>
+	<ul>
+		<li>complete oil changes</li>
+		<li>tune-ups</li>
+		<li>transmission flushes</li>
+		<li>radiator fills</li>
+		<li>brake services</li> 
+	</ul>	
+	<h2>Save time and money with extended drain intervals</h2>
+	<p>Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
+			Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
+			all passenger, commercial and racing applications.</p>
+	<p> <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; were the first to accomplish this in 1972 with their motor oils, and have been leading the industry ever since with 
+			a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines.</p>  
 	</section>
-	
-	<section>
-	
-		<h2>Save time and money with extended drain intervals</h2>
-		
-		<p>Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
-	Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
-	all passenger, commercial and racing applications.</p>
-			
-		<p> They were the first to accomplish this in 1972 with their motor oil, and have been leading the industry ever since with 
-	a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines.</p>  
-			
-	</section>
-	
-	<article>
-	
-		<h3>Service Packages</h3>
-		
-		<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
-		
-		<ul>
-			<li>Bronze <br><img src="images/bronze_package.gif" /></li>
-			<li>Silver<br><img src="images/silver_package.gif" /></li>
-			<li>Gold<br><img src="images/gold_package.gif" /></li>
-			<li>Platinum<br><img src="images/platinum_package.gif" /></li>
-		<ul>
-		
-		<p>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</p>
-		
-	</article>
-	
-	<section>
-	
-		<p><strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. 
-		Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.</p>
-		
+</div>	<!-- End of mainSection -->
+<footer>
+	<h3>Car Kare Express &trade;</h3>
+		<p>A subsidiary of UniqueOne Networks, LLC &trade; 2012. </p>
+		<p>All rights reserved</p>
 		<p><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong> 
 		<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p>
-		
-	</section>
-	
-	<aside>
-	
-		<h3>Popular Amsoil Products</h3>
-		
-		<ul>
-			<li>Amsoil Brake Fluid <br> <img src="images/ams_brake_fluid.jpg" /></li>
-			<li>Amsoil PI <br><img src="images/ams_pi.jpg" /></li>
-			<li>European Formula 5W-30<br><img src="images/ams_euro_oil.jpg" /></li>
-			<li>Amsoil Antifreeze<br><img src="images/ams_antifreeze.jpg" /></li>
-		</ul>
-			
-	</aside>
-	
-	
+</footer>
+</div><!-- End of contentWrapper -->
 </body>
-
-
-	<footer>
-
-	<h2>Car Kare Express &trade;</h2>
-	
-	<p>A subsidiary of UniqueOne Networks, LLC &trade; 2012. </p>
-	
-	<p>All rights reserved</p>
-	
-	
-	</footer>
-
 </html>
