--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div id="logo">
 			<img src="images/car_kare_logo_3.png" alt="Car Kare Express" id="Car_Kare_Express_Logo" >
 			<h1>Car Kare Express&trade; </h1>
-			<p>Mobile Automotive Maintenance</p>
+			<p class="tagLine">Mobile Automotive Maintenance</p>
 			</div>
 		</header>
 		<nav>
@@ -24,60 +24,58 @@
 				<li><a href="#">Contact Us</a></li>
 			</ul>
 		</nav>
-<aside>
-	<h4>Popular Amsoil Products</h4>
-	<ul>
-		<li><img src="images/ams_brake_fluid.jpg" alt="Amsoil Brake Fluid" id="Amsoil_Brake_Fluid"> <br>Amsoil Brake Fluid</li>
-		<li><img src="images/ams_pi.jpg" alt="Amsoil PI" id="Amsoil_Performance_Improver"><br>Amsoil Performance Improver</li>
-		<li><img src="images/ams_euro_oil.jpg" alt="European Formula 5W-30" id="European_Formula_5W-30"><br>European Formula 5W-30</li>
-		<li><img src="images/ams_antifreeze.jpg" alt="Amsoil Antifreeze" id="Amsoil_Antifreeze"><br>Amsoil Antifreeze</li>
-	</ul>
-</aside>
-<article>
-	<gallery>
-	<h2>Experience the Car Kare Express difference with onsite maintenance</h2>
-	<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
-	<ul>
-		<li><!--Bronze<br>--><img src="images/bronze_package.png" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
-		<li><!--Silver<br>--><img src="images/silver_package.png" alt="Car Kare Express Silver Package" id="silver_package.png"></li>
-		<li><!--Gold<br>--><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
-		<li><!--Platinum<br>--><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
-	</ul>
-	</gallery>
+	<aside>
+		<h4>Popular Amsoil Products</h4>
+			<ul>
+				<li><img src="images/ams_brake_fluid.png" alt="Amsoil Brake Fluid" id="Amsoil_Brake_Fluid"> <br>Amsoil Brake Fluid</li>
+				<li><img src="images/ams_pi.png" alt="Amsoil PI" id="Amsoil_Performance_Improver"><br>Amsoil Performance Improver</li>
+				<li><img src="images/ams_euro_oil.png" alt="European Formula 5W-30" id="European_Formula_5W-30"><br>European Formula 5W-30</li>
+				<li><img src="images/ams_antifreeze.png" alt="Amsoil Antifreeze" id="Amsoil_Antifreeze"><br>Amsoil Antifreeze</li>
+			</ul>
+	</aside><!-- End of aside -->
+	<article>
+			<h3>Experience the Car Kare Express difference with onsite maintenance</h3>
+			<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
+			<ul>
+				<li><!--Bronze<br>--><img src="images/bronze_package.png" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
+				<li><!--Silver<br>--><img src="images/silver_package.png" alt="Car Kare Express Silver Package" id="silver_package.png"></li>
+				<li><!--Gold<br>--><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
+				<li><!--Platinum<br>--><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
+			</ul>
 	<button>Sign In </button> <button>Get a Quote </button>&nbsp;
 	<p>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</p>
-</article>
-<div id="mainSection">
-	<section class="main">
-	<h2>Have your cake and eat it too...</h2>
-	<p> Why take time away from work or even after work to get your vehicle serviced when you can do both simultaneously. 
+	</article>
+	<div id="mainSection">
+		<section class="main">
+			<h3>Have your cake and eat it too...</h3>
+			<p> Why take time away from work or even after work to get your vehicle serviced when you can do both simultaneously. 
 			What if you could have the service technician come to you? Think of the time you could save. Our <strong>Car Kare Express&trade;</strong> trucks
-			can perform routine services like:
-		</p>
-	<p><strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. </p>
-	<p>	Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.</p>
-	<ul>
-		<li>complete oil changes</li>
-		<li>tune-ups</li>
-		<li>transmission flushes</li>
-		<li>radiator fills</li>
-		<li>brake services</li> 
-	</ul>	
-	<h2>Save time and money with extended drain intervals</h2>
-	<p>Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
+			can perform routine services like:</p>
+			<ul>
+				<li>complete oil changes</li>
+				<li>tune-ups</li>
+				<li>transmission flushes</li>
+				<li>radiator fills</li>
+				<li>brake services</li> 
+			</ul>
+			<p><strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. </p>
+			<p>	Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.</p>
+				
+			<h3>Save time and money with extended drain intervals</h3>
+			<p>Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
 			Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
 			all passenger, commercial and racing applications.</p>
-	<p> <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; were the first to accomplish this in 1972 with their motor oils, and have been leading the industry ever since with 
+			<p> <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; were the first to accomplish this in 1972 with their motor oils, and have been leading the industry ever since with 
 			a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines.</p>  
-	</section>
-</div>	<!-- End of mainSection -->
-<footer>
-	<h3>Car Kare Express &trade;</h3>
+		</section><!-- End of section -->
+	</div>	<!-- End of mainSection -->
+	<footer>
+		<h3>Car Kare Express &trade;</h3>
 		<p>A subsidiary of UniqueOne Networks, LLC &trade; 2012. </p>
 		<p>All rights reserved</p>
 		<p><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong> 
 		<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p>
-</footer>
-</div><!-- End of contentWrapper -->
-</body>
+	</footer> <!-- End of footer -->
+	</div><!-- End of contentWrapper -->
+</body><!-- End of bodyt-->
 </html>
