--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" >
 	<title>Car Kare Express</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Paytone+One|Signika|Archivo+Narrow' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div id="contentWrapper">
 		<header>
 			<div id="logo">
 			<img src="images/car_kare_logo_3.png" alt="Car Kare Express" id="Car_Kare_Express_Logo" >
-			<h1>Car Kare Express&trade; </h1>
+			<h1>CAR KARE EXPRESS&trade; </h1>
 			<p class="tagLine">Mobile Automotive Maintenance</p>
 			</div>
 		</header>
@@ -43,31 +44,34 @@
 				<li><!--Platinum<br>--><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
 			</ul>
 	<button>Sign In </button> <button>Get a Quote </button>&nbsp;
-	<p>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</p>
 	</article>
 	<div id="mainSection">
 		<section class="main">
-			<h3>Have your cake and eat it too...</h3>
-			<p> Why take time away from work or even after work to get your vehicle serviced when you can do both simultaneously. 
-			What if you could have the service technician come to you? Think of the time you could save. Our <strong>Car Kare Express&trade;</strong> trucks
-			can perform routine services like:</p>
+			<h3>Put an end to waiting at the repair shop</h3>
+			<p> We take the hassle out of servicing your vehicle by bringing the service bay to you. Our On-Site maintenance technicians are able to meet you at work,
+			the salon, or at home. <br>Almost any situation that keeps you away from your vehicle is an opportune time to get it serviced by us. Just think of the time you 
+			can save!!! <br>You can schedule a multitude of services to be performed on your vehicle and not have to ask the boss for time off. Time that you won't get paid for
+			Just the cost of alternate transportation alone makes this a wise choice. Let your friends in on the deal and schedule services for the entire gang.<br>
+			<strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. <br>
+				Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.<br>
+			Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
+			Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
+			all passenger, commercial and racing applications.
+		</section><!-- End of section -->
+			<h3><strong>Car Kare Express&trade;</strong> services include:</h3>
 			<ul>
 				<li>complete oil changes</li>
 				<li>tune-ups</li>
 				<li>transmission flushes</li>
 				<li>radiator fills</li>
 				<li>brake services</li> 
-			</ul>
-			<p><strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. </p>
-			<p>	Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.</p>
-				
-			<h3>Save time and money with extended drain intervals</h3>
-			<p>Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
-			Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
-			all passenger, commercial and racing applications.</p>
-			<p> <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; were the first to accomplish this in 1972 with their motor oils, and have been leading the industry ever since with 
-			a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines.</p>  
-		</section><!-- End of section -->
+			</ul><br>
+			<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; were the first to accomplish this in 1972 with their motor oils, and have been leading the industry ever since with 
+			a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines. 
+			<h4>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</h4>
+			
+			  
+		
 	</div>	<!-- End of mainSection -->
 	<footer>
 		<h3>Car Kare Express &trade;</h3>
