Incomplete Responsive Layout
started to make changes and need more time to complete the project as
things started "breaking"

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
 				<li><!--Gold<br>--><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
 				<li><!--Platinum<br>--><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
 			</ul>
-	<button>Sign In </button> <button>Get a Quote </button>&nbsp;
+	<section id="quoteButton">
+			<ul>
+				<li>Get a Quote </li>
+			</ul>
+	</section>
 	</article>
 	<div id="mainSection">
 		<section class="main">
@@ -69,9 +73,6 @@
 			<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; were the first to accomplish this in 1972 with their motor oils, and have been leading the industry ever since with 
 			a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines. 
 			<h4>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</h4>
-			
-			  
-		
 	</div>	<!-- End of mainSection -->
 	<footer>
 		<h3>Car Kare Express &trade;</h3>
