Frustrating responsive designs

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head> 
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" >
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Car Kare Express</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Paytone+One|Signika|Archivo+Narrow' rel='stylesheet' type='text/css'>
@@ -14,6 +15,7 @@
 			<h1>CAR KARE EXPRESS&trade; </h1>
 			<p class="tagLine">Mobile Automotive Maintenance</p>
 			</div>
+		
 		</header>
 		<nav>
 			<ul>
@@ -28,14 +30,14 @@
 	<aside>
 		<h4>Popular Amsoil Products</h4>
 			<ul>
-				<li><img src="images/ams_brake_fluid.png" alt="Amsoil Brake Fluid" id="Amsoil_Brake_Fluid"> <br>Amsoil Brake Fluid</li>
+				<li><img src="images/ams_brake_fluid.png" alt="Amsoil Brake Fluid" id="Amsoil_Brake_Fluid"><br>Amsoil Brake Fluid</li>
 				<li><img src="images/ams_pi.png" alt="Amsoil PI" id="Amsoil_Performance_Improver"><br>Amsoil Performance Improver</li>
 				<li><img src="images/ams_euro_oil.png" alt="European Formula 5W-30" id="European_Formula_5W-30"><br>European Formula 5W-30</li>
 				<li><img src="images/ams_antifreeze.png" alt="Amsoil Antifreeze" id="Amsoil_Antifreeze"><br>Amsoil Antifreeze</li>
 			</ul>
 	</aside><!-- End of aside -->
 	<article>
-			<h3>Experience the Car Kare Express difference with onsite maintenance</h3>
+			<h2>Experience the Car Kare Express difference with onsite maintenance</h2>
 			<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
 			<ul>
 				<li><!--Bronze<br>--><img src="images/bronze_package.png" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
@@ -43,11 +45,6 @@
 				<li><!--Gold<br>--><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
 				<li><!--Platinum<br>--><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
 			</ul>
-	<section id="quoteButton">
-			<ul>
-				<li>Get a Quote </li>
-			</ul>
-	</section>
 	</article>
 	<div id="mainSection">
 		<section class="main">
@@ -82,5 +79,5 @@
 		<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p>
 	</footer> <!-- End of footer -->
 	</div><!-- End of contentWrapper -->
-</body><!-- End of bodyt-->
+</body><!-- End of body-->
 </html>
