total reconstruct of the website

--- a/index.html
+++ b/index.html
@@ -4,80 +4,111 @@
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8" >
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Car Kare Express</title>
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/cssmain.css">
 	<link href='http://fonts.googleapis.com/css?family=Paytone+One|Signika|Archivo+Narrow' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div id="contentWrapper">
-		<header>
-			<div id="logo">
+	<div id="outerWrapper">
+		<div id="contentWrapper">
+			<header>
+				<div id="logo">
 			<img src="images/car_kare_logo_3.png" alt="Car Kare Express" id="Car_Kare_Express_Logo" >
 			<h1>CAR KARE EXPRESS&trade; </h1>
 			<p class="tagLine">Mobile Automotive Maintenance</p>
 			</div>
-		
-		</header>
-		<nav>
+				
+			</header>
+			<nav>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Service Levels</a></li>
+					<li><a href="#">FAQ</a></li>
+					<li><a href="http://www.amsoil.com">Amsoil Home Page</a></li>
+					<li><a href="#">Contact Us</a></li>
+					</ul>
+			</nav>
+			<aside>
+				<h4>Popular Amsoil Products</h4>
 			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">About Us</a></li>
-				<li><a href="#">Service Levels</a></li>
-				<li><a href="#">FAQ</a></li>
-				<li><a href="http://www.amsoil.com">Amsoil Home Page</a></li>
-				<li><a href="#">Contact Us</a></li>
+				<li><img src="images/amsoil_brake_fluid.jpg" alt="Amsoil Brake Fluid" id="Amsoil_Brake_Fluid"><br>Amsoil Brake Fluid</li>
+				<li><img src="images/amsoil_pi.jpg" alt="Amsoil PI" id="Amsoil_Performance_Improver"><br>Amsoil Performance Improver</li>
+				<li><img src="images/amsoil_zrod_oil.jpg" alt="Amsoil_Z-Rod Oil" id="Amsoil_Z-Rod_Oil"><br>Amsoil Z-Rod Oil</li>
+				<li><img src="images/amsoil_antifreeze.jpg" alt="Amsoil_Antifreeze" id="Amsoil_Antifreeze"><br>Amsoil Antifreeze</li>
 			</ul>
-		</nav>
-	<aside>
-		<h4>Popular Amsoil Products</h4>
-			<ul>
-				<li><img src="images/ams_brake_fluid.png" alt="Amsoil Brake Fluid" id="Amsoil_Brake_Fluid"><br>Amsoil Brake Fluid</li>
-				<li><img src="images/ams_pi.png" alt="Amsoil PI" id="Amsoil_Performance_Improver"><br>Amsoil Performance Improver</li>
-				<li><img src="images/ams_euro_oil.png" alt="European Formula 5W-30" id="European_Formula_5W-30"><br>European Formula 5W-30</li>
-				<li><img src="images/ams_antifreeze.png" alt="Amsoil Antifreeze" id="Amsoil_Antifreeze"><br>Amsoil Antifreeze</li>
-			</ul>
-	</aside><!-- End of aside -->
-	<article>
+			</aside>
+			<article>
 			<h2>Experience the Car Kare Express difference with onsite maintenance</h2>
 			<p>We offer a variety of service levels to help you choose the one that's right for your needs.</p>
 			<ul>
-				<li><!--Bronze<br>--><img src="images/bronze_package.png" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
-				<li><!--Silver<br>--><img src="images/silver_package.png" alt="Car Kare Express Silver Package" id="silver_package.png"></li>
-				<li><!--Gold<br>--><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
-				<li><!--Platinum<br>--><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
+				<li><img src="images/bronze_package.png" alt="Car Kare Express Bronze Package" id="bronze_package.png" ></li>
+				<li><img src="images/silver_package.png" alt="Car Kare Express Silver Package" id="silver_package.png"></li>
+				<li><img src="images/gold_package.png" alt="Car Kare Express Gold Package" id="gold_package.png"></li>
+				<li><img src="images/platinum_package.png" alt="Car Kare Express Platinum Package" id="platinum_package.png"></li>
 			</ul>
-	</article>
-	<div id="mainSection">
-		<section class="main">
-			<h3>Put an end to waiting at the repair shop</h3>
-			<p> We take the hassle out of servicing your vehicle by bringing the service bay to you. Our On-Site maintenance technicians are able to meet you at work,
-			the salon, or at home. <br>Almost any situation that keeps you away from your vehicle is an opportune time to get it serviced by us. Just think of the time you 
-			can save!!! <br>You can schedule a multitude of services to be performed on your vehicle and not have to ask the boss for time off. Time that you won't get paid for
-			Just the cost of alternate transportation alone makes this a wise choice. Let your friends in on the deal and schedule services for the entire gang.<br>
-			<strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. <br>
+			</article>
+			<section>
+				<h3>Put an end to waiting at the repair shop</h3>
+				<p> We take the hassle out of servicing your vehicle by bringing the service bay to you. Our On-Site maintenance technicians are able to meet you at work,
+				the salon, or at home. <br>Almost any situation that keeps you away from your vehicle is an opportune time to get it serviced by us. Just think of the time you 
+				can save!!! <br>You can schedule a multitude of services to be performed on your vehicle and not have to ask the boss for time off. Time that you won't get paid for
+				Just the cost of alternate transportation alone makes this a wise choice. Let your friends in on the deal and schedule services for the entire gang.<br>
+				<strong>Car Kare Express&trade;</strong> takes pride in using the best synthetic lubricants on the market today. <br>
 				Our technicians use <a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; exclusively.<br>
-			Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
-			Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
-			all passenger, commercial and racing applications.
-		</section><!-- End of section -->
-			<h3><strong>Car Kare Express&trade;</strong> services include:</h3>
-			<ul>
-				<li>complete oil changes</li>
-				<li>tune-ups</li>
-				<li>transmission flushes</li>
-				<li>radiator fills</li>
-				<li>brake services</li> 
-			</ul><br>
-			<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg; were the first to accomplish this in 1972 with their motor oils, and have been leading the industry ever since with 
-			a product line that covers <em>gas</em>, <em>diesel</em>, and <em>marine</em> engines. 
-			<h4>All services include a fuel treatment with <em>Amsoil PI</em> Performance Improver.</h4>
-	</div>	<!-- End of mainSection -->
-	<footer>
-		<h3>Car Kare Express &trade;</h3>
-		<p>A subsidiary of UniqueOne Networks, LLC &trade; 2012. </p>
-		<p>All rights reserved</p>
-		<p><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong> 
-		<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p>
-	</footer> <!-- End of footer -->
-	</div><!-- End of contentWrapper -->
+				Amsoil products have been engineered to go way beyond the 3,000 mile drain interval that most drivers are accustomed to.
+				Their engine oils and other lubricants have been approved by the <strong><a href="http://www.api.org/">American Petroleum Institute</a></strong> for use in 
+				all passenger, commercial and racing applications.
+			</section>
+			<div id="gallery">
+				<h3>Amsoil Synthetic Lubricants protect your mechanical parts</h3>
+				<ul>
+					<li><img src="images/amsoil_gear_lube.jpg" alt="Amsoil_Gear_Lube" id="Amsoil_Gear_Lube"><br>Amsoil Gear Lube</li>
+					<li><img src="images/ams_air_filter.jpg" alt="Amsoil_EA_Air_Filters" id="Amsoil_Air_Filters"><br>Amsoil Ea Air Filters</li>
+					<li><img src="images/ams_hd.jpg" alt="Amsoil_HD_Metal_Protector" id="Amsoil_HD_Metal_Protector"><br>Amsoil HD Metal Protector</li>
+					<li><img src="images/ams_oil.jpg" alt="Amsoil_10W-40_Motor_Oil" id="Amsoil_10W-40_Motor_Oil"><br>Amsoil 10W-40 Motor Oil</li>
+				</ul>
+			</div><!--End of gallery -->
+			<footer>
+				<h3>Car Kare Express &trade;</h3>
+				<table>
+					<tr>
+						<td>A subsidiary of </td>
+						<td>Site Map</td>
+						<td>Catch our Social Media Trucks</td>
+						<td></td>
+					</tr>
+					<tr>
+						<td>UniqueOne Networks, LLC &trade; 2012.</td>
+						<td>About Us</td>
+						<td></td>
+						<td><img src="images/small_fb_truck.png" alt="Facebook" id="Facebook_Truck" /><img src="images/small_linkedin_truck.png" alt="LinkedIn" id="LinkedIn" /></td>
+					</tr>
+					<tr>
+						<td>All rights reserved.</td>
+						<td>Contact Us</td>
+						<td></td>
+						<td><img src="images/small_rss_truck.png" alt="RSS Feed" id="RSS_Feed" /><img src="images/small_twitter_truck.png" alt="Twitter" id="Twitter" /></td>
+					</tr>
+					<tr>
+						<td><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong></em></td>
+						<td>FAQ Corner</td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><em><a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor.</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+				<!--<p>A subsidiary of UniqueOne Networks, LLC &trade; 2012. </p>
+				<p>All rights reserved</p>
+				<p><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong> 
+				<a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor. </p> -->
+
+			</footer><!--End of footer -->
+		</div><!--End of contentWrapper -->
+	</div><!--End of outerWrapper -->
 </body><!-- End of body-->
 </html>
