--- a/index.html
+++ b/index.html
@@ -72,31 +72,39 @@
 				<h3>Car Kare Express &trade;</h3>
 				<table>
 					<tr>
-						<td>A subsidiary of </td>
-						<td>Site Map</td>
-						<td>Catch our Social Media Trucks</td>
-						<td></td>
+						<th>A subsidiary of </th>
+						<th>Site Map</th>
+						<th></th>
+						<th></th>
+						<th>Catch our Social Media Trucks</th>
+						
 					</tr>
 					<tr>
 						<td>UniqueOne Networks, LLC &trade; 2012.</td>
 						<td>About Us</td>
 						<td></td>
-						<td><img src="images/small_fb_truck.png" alt="Facebook" id="Facebook_Truck" /><img src="images/small_linkedin_truck.png" alt="LinkedIn" id="LinkedIn" /></td>
+						<td></td>
+						<td><img src="images/small_fb_truck.png" alt="Facebook" id="Facebook_Truck" /></td>
+						<td><img src="images/small_linkedin_truck.png" alt="LinkedIn" id="LinkedIn" /></td>
 					</tr>
 					<tr>
 						<td>All rights reserved.</td>
 						<td>Contact Us</td>
 						<td></td>
-						<td><img src="images/small_rss_truck.png" alt="RSS Feed" id="RSS_Feed" /><img src="images/small_twitter_truck.png" alt="Twitter" id="Twitter" /></td>
+						<td></td>
+						<td><img src="images/small_twitter_truck.png" alt="Twitter" id="Twitter" /></td>
+						<td><img src="images/small_rss_truck.png" alt="RSS Feed" id="RSS_Feed" /></td>
 					</tr>
 					<tr>
 						<td><strong>Car Kare Express&trade;</strong> is an <em><strong>Independent</strong></em></td>
 						<td>FAQ Corner</td>
 						<td></td>
 						<td></td>
+						<td></td>
 					</tr>
 					<tr>
 						<td><em><a href="http://www.amsoil.com">Amsoil Synthetic Lubricants</a>&reg;</em> Distributor.</td>
+						<td></td>
 						<td></td>
 						<td></td>
 						<td></td>
