--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>Car Kare Express</title>
 	<link href='http://fonts.googleapis.com/css?family=Limelight' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="css/cssmain.css">
+	<link rel="stylesheet" href="css/main.css">
 </head>
 	<body>
 		<div id="outerWrapper">
